<resources>
    <string name="app_name">APDC2021</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="registered">"Register successful !"</string>
    <string name="edited">"Profile edited successfully !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_confirmation">Passwords must be equal</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_phonenum">Invalid phone number</string>
    <string name="invalid_address">Invalid address</string>
    <string name="invalid_bday">Invalid bday</string>
    <string name="invalid_gender">Invalid gender</string>
    <string name="invalid_nationality">Invalid nationality</string>
    <string name="invalid_bio">Invalid bio</string>
    <string name="login_failed">"Login failed"</string>
    <string name="get_profile_failed">"Get profile failed"</string>
    <string name="register_failed">"Register failed"</string>
    <string name="edit_failed">"Edit failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Givers">Givers</string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_main">MainActivity</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="register_prompt">Register</string>
    <string name="prompt_confirmation">Confirm password</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Settings">Settings</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="prompt_personalName">Personal name</string>
    <string name="invalid_name">Name can\'t be empty</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_bday">Birthday</string>
    <string name="action_submit">Submit</string>
    <string name="prompt_no_date_selected">No date selected.</string>
    <string name="prompt_phoneNum">Phone Number</string>
    <string name="prompt_bio">Insert a description of yourself here!</string>
    <string name="prompt_nationality">Nationality</string>
    <string-array name="genders">
        <item>Choose gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>