<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editProfile.EditProfileActivity">

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="111dp"
        android:ems="10"
        android:hint="@string/prompt_address"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bttnBday"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:text="@string/prompt_bday"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

    <Spinner
        android:id="@+id/editGenders"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="112dp"
        android:entries="@array/genders"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBday" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="40dp"
        android:text="@string/action_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBio" />

    <TextView
        android:id="@+id/textBday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="180dp"
        android:text="@string/prompt_no_date_selected"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnBday" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="106dp"
        android:ems="10"
        android:hint="@string/prompt_phoneNum"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGenders" />

    <EditText
        android:id="@+id/editTextNationality"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="106dp"
        android:ems="10"
        android:hint="@string/prompt_nationality"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextBio"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/prompt_bio"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNationality" />

    <ProgressBar
        android:id="@+id/loadingEdit"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/editTextBio"
        app:layout_constraintEnd_toEndOf="@+id/editTextNationality"
        app:layout_constraintStart_toStartOf="@+id/editTextNationality"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>