<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <ProgressBar
        android:id="@+id/loadingRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordRegister"
        app:layout_constraintStart_toStartOf="@+id/passwordRegister"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="209dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="30dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalNameRegist" />

    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="209dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:drawableLeft="@drawable/person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegister" />

    <EditText
        android:id="@+id/personalNameRegist"
        android:layout_width="209dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="100dp"
        android:drawableLeft="@drawable/person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/prompt_personalName"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="209dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:drawableLeft="@drawable/lock"
        android:ems="10"
        android:hint="@string/prompt_confirmation"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="209dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:drawableLeft="@drawable/lock"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegister" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="276dp"
        android:text="@string/register_prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPass"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>